Mention dot in man page

--- a/man/pbb.1
+++ b/man/pbb.1
@@ -385,5 +385,5 @@ Managing version control of the files in the \*(lqsource\*(rq branch is
 completely up you.
 .\" ============================================================================
 .SH SEE ALSO
-.BR imagemagick (1),\  pandoc (1),\  pandoc-citeproc (1)
+.BR dot (1),\ imagemagick (1),\  pandoc (1),\  pandoc-citeproc (1)
 .\" ============================================================================
