Fix typo in man page

--- a/man/pbb.1
+++ b/man/pbb.1
@@ -206,7 +206,7 @@ and the code block is replaced by the generated graph in SVG format.
 To add a caption, an attribute
 .I caption
 can be used, and to add the original code block as an HTML comment, the class
-.I includeCode
+.I includeSource
 (or
 .IR include-source )
 can be added.
